--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,17 +1,2 @@
-/Arc.class
-/GenerationAleatoire.class
-/Graph.class
-/Interface$1.class
-/Interface.class
-/Interface2$1.class
-/Interface2$2.class
-/Interface2.class
-/Interface2.form
-/Main.class
-/Noeud.class
-/Nopt.class
-/Route.class
-/STP.class
-/Ville.class
-/Graphe.class
-/VDC.class
+/Nopt.java
+/Main.java
