Premiers algo sur interface + Changement coordonées de int vers double

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,9 @@
-/Nopt.java
-/Main.java
+/Interface.form
+/Main$1.class
+/Dessin$1.class
+/Interface$2.class
+/Interface$3.class
+/Interface$4.class
+/Interface$5.class
+/Interface$6.class
+/Interface$7.class
